--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Remotrix</string>
+    <string name="manage_accounts">Manage Accounts</string>
+    <string name="accounts">Accounts\n</string>
+    <string name="manage_accounts_desc">View, modify and delete accounts to send messages with</string>
 </resources>
