--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="manage_accounts">Manage Accounts</string>
     <string name="accounts">Accounts\n</string>
     <string name="manage_accounts_desc">View, modify and delete accounts to send messages with</string>
+    <string name="account_list">Manage Accounts</string>
+    <string name="add_new_account">Add new account</string>
+    <string name="go_back">Go back</string>
 </resources>
