--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="go_back">Go back</string>
     <string name="new_account">Add New Account</string>
     <string name="homeserver_url_label">Homeserver URL (Defaults to Matrix.org)</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
 </resources>
