Password field with toggleable visibility

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="homeserver_url_label">Homeserver URL (Defaults to Matrix.org)</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
+    <string name="hide_password">Hide password</string>
+    <string name="show_password">Show password</string>
 </resources>
