Moving file where it belongs, trying to import Matrix library

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="hide_password">Hide password</string>
     <string name="show_password">Show password</string>
     <string name="log_in">Log In</string>
+    <string name="invalid_homeserver_url">Invalid homeserver URL.</string>
 </resources>
