--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="log_in">Log In</string>
     <string name="invalid_homeserver_url">Invalid homeserver URL.</string>
     <string name="generic_error">Generic error.</string>
+    <string name="login_failed">Login failed: %1$s</string>
 </resources>
