--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,8 @@
     <string name="setup">Setup</string>
     <string name="logged_in">Logged in as %s</string>
     <string name="delete_account">Delete account</string>
+    <string name="delete">Delete</string>
+    <string name="cancel">Cancel</string>
+    <string name="del_account_help">Account will be logged out first, and cryptographic data on this device will be removed.</string>
+    <string name="del_account_title">Delete account %s?</string>
 </resources>
