--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="invalid_homeserver_url">Invalid homeserver URL.</string>
     <string name="generic_error">Generic error.</string>
     <string name="login_failed">Login failed: %1$s</string>
-    <string name="add_account_help">Press + to add new account. Currently, only 1 account is supported.</string>
+    <string name="add_account_help">Press + in the top right corner to add a new account.</string>
     <string name="one_account_limit_help">Only one account can be added for now.</string>
     <string name="setup">Setup</string>
     <string name="logged_in">Logged in as %s</string>
