--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,9 @@
     <string name="failed_to_send_message">Failed to send message.</string>
     <string name="test_msg">Test message sent from Remotrix.</string>
     <string name="test_msg_sent">Test message sent; Check account management room for its arrival.</string>
+    <string name="set_manager_account">Set manager account</string>
+    <string name="set_manager_account_desc">This account will be used for managing bots and debugging. Make sure this is your account, and all bots can invite this account.</string>
+    <string name="confirm">Confirm</string>
+    <string name="choose_manager_account">Choose manager account</string>
+    <string name="manager_id">New Manager ID</string>
 </resources>
