--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,5 +45,10 @@
     <string name="welcome_3">Therefore, it is best to set these as if they cannot be changed later.</string>
     <string name="welcome_4">First off, please enter an account name in the form of \'@username:example.com. The account entered will be used as admin account, and bots will respond to commands from this account.</string>
     <string name="welcome_5">Next, please select a space. A space is a feature in Matrix where it basically acts like folder for rooms. This app automatically generates rooms, and it is essential that rooms are easily discoverable for bots.</string>
-    <string name="welcome">Welcome.</string>
+    <string name="welcome">Welcome</string>
+    <string name="set_admin_account">Set Admin Account</string>
+    <string name="set_remotrix_space">Set Remotrix Space</string>
+    <string name="example_account">\@username:example.com</string>
+    <string name="existing_space_id">Existing space ID</string>
+    <string name="sample_space_id">!IntELLIgiBle:example.com</string>
 </resources>
