Entered username and space ID are saved into settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,5 @@
     <string name="example_account">\@username:example.com</string>
     <string name="existing_space_id">Existing space ID</string>
     <string name="sample_space_id">!IntELLIgiBle:example.com</string>
+    <string name="invalid_space_id">Invalid space ID.</string>
 </resources>
