--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,8 +30,8 @@
     <string name="failed_to_send_message">Failed to send message.</string>
     <string name="test_msg">Test message sent from Remotrix.</string>
     <string name="test_msg_sent">Test message sent; Check account management room for its arrival.</string>
-    <string name="set_manager_account">Set manager account</string>
-    <string name="set_manager_account_desc">This account will be used for managing bots and debugging. Make sure this is your account, and all bots can invite this account.</string>
+    <string name="set_manager_account">Reopen Setup Page</string>
+    <string name="set_manager_account_desc">Use this to update your admin account and bot space. Note that migration does not exist yet.</string>
     <string name="confirm">Confirm</string>
     <string name="choose_manager_account">Choose manager account</string>
     <string name="manager_id">New Manager ID</string>
@@ -52,4 +52,5 @@
     <string name="existing_space_id">Existing space ID</string>
     <string name="sample_space_id">!unIntELLIgiBle:example.com</string>
     <string name="invalid_space_id">Invalid space ID.</string>
+    <string name="setup_complete">Setup complete.</string>
 </resources>
