--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,16 +38,18 @@
     <string name="invalid_id">Invalid ID.</string>
     <string name="management_room_name">Management room for %s</string>
     <string name="management_room_desc">User may send messages to this room in order to manage automated actions of account %s.</string>
-    <string name="cannot_create_management_room">Unable to create management room. Perhaps your Manager ID is invalid?</string>
+    <string name="cannot_create_management_room">Unable to create management room.</string>
     <string name="setup_remotrix">Setup Remotrix</string>
     <string name="welcome_1">Before we begin, some settings must be done.</string>
     <string name="welcome_2">Note that while you can change them in the future, migration does not exist yet. As a result, it would be very tedious.</string>
     <string name="welcome_3">Therefore, it is best to set these as if they cannot be changed later.</string>
     <string name="welcome_4">First off, please enter an account name in the form of \'@username:example.com. The account entered will be used as admin account, and bots will respond to commands from this account.</string>
-    <string name="welcome_5">Next, please select a space. A space is a feature in Matrix where it basically acts like folder for rooms. This app automatically generates rooms, and it is essential that rooms are easily discoverable for bots.</string>
+    <string name="welcome_5">Next, two spaces, messaging space and management space are specified.</string>
+    <string name="welcome_6">Messaging space is where messages from various senders will be forwarded to. For example, if user "Alice" sends you a message, a room named "Alice" will be created under this message space, and the message Alice sent you will be forwarded here.</string>
+    <string name="welcome_7">Management space is NOT mandatory, but recommended. For every bot account you add to this app, a management room, initially between the management user and the bot, will be created. If this is set, this room will be created under that space, which would make things rather tidy.</string>
     <string name="welcome">Welcome</string>
     <string name="set_admin_account">Set Admin Account</string>
-    <string name="set_remotrix_space">Set Remotrix Space</string>
+    <string name="set_remotrix_spaces">Set Remotrix Spaces</string>
     <string name="example_account">\@username:example.com</string>
     <string name="existing_space_id">Existing space ID</string>
     <string name="sample_space_id">!unIntELLIgiBle:example.com</string>
@@ -55,4 +57,6 @@
     <string name="setup_complete">Setup complete.</string>
     <string name="no_child_space_permission">%s has no permission to create child room in the management space. Please grant it first.</string>
     <string name="cannot_find_space">%s cannot locate management space. Please invite this account to that space first.</string>
+    <string name="message_space">Message Space</string>
+    <string name="management_space">Management Space</string>
 </resources>
