--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,13 +40,11 @@
     <string name="management_room_desc">User may send messages to this room in order to manage automated actions of account %s.</string>
     <string name="cannot_create_management_room">Unable to create management room.</string>
     <string name="setup_remotrix">Setup Remotrix</string>
-    <string name="welcome_1">Before we begin, some settings must be done.</string>
-    <string name="welcome_2">Note that while you can change them in the future, migration does not exist yet. As a result, it would be very tedious.</string>
-    <string name="welcome_3">Therefore, it is best to set these as if they cannot be changed later.</string>
-    <string name="welcome_4">First off, please enter an account name in the form of \'@username:example.com. The account entered will be used as admin account, and bots will respond to commands from this account.</string>
-    <string name="welcome_5">Next, two spaces, messaging space and management space are specified.</string>
-    <string name="welcome_6">Messaging space is where messages from various senders will be forwarded to. For example, if user "Alice" sends you a message, a room named "Alice" will be created under this message space, and the message Alice sent you will be forwarded here.</string>
-    <string name="welcome_7">Management space is NOT mandatory, but recommended. For every bot account you add to this app, a management room, initially between the management user and the bot, will be created. If this is set, this room will be created under that space, which would make things rather tidy.</string>
+    <string name="welcome_1">Before we begin, some settings must be done. Note that while you can change them in the future, migration does not exist yet. As a result, it would be very tedious. Therefore, it is best to set these as if they cannot be changed later.</string>
+    <string name="welcome_2">First off, please enter an account name in the form of \'@username:example.com. The account entered will be used as admin account, and bots will respond to commands from this account.</string>
+    <string name="welcome_3">Next, two spaces, messaging space and management space are specified.</string>
+    <string name="welcome_4">Messaging space is where messages from various senders will be forwarded to. For example, if user "Alice" sends you a message, a room named "Alice" will be created under this message space, and the message Alice sent you will be forwarded here.</string>
+    <string name="welcome_5">Management space is NOT mandatory, but recommended. For every bot account you add to this app, a management room, initially between the management user and the bot, will be created. If this is set, this room will be created under that space, which would make things rather tidy.</string>
     <string name="welcome">Welcome</string>
     <string name="set_admin_account">Set Admin Account</string>
     <string name="set_remotrix_spaces">Set Remotrix Spaces</string>
