--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,8 +28,8 @@
     <string name="account_options">Account options</string>
     <string name="send_test_message">Send test message</string>
     <string name="failed_to_send_message">Failed to send message.</string>
-    <string name="test_msg">Test message sent from Remotrix.</string>
-    <string name="test_msg_sent">Test message sent; Check account management room for its arrival.</string>
+    <string name="test_msg">Test message sent from Remotrix at %s.</string>
+    <string name="test_msg_sent">Test message sent at %s; Check account management room for its arrival.</string>
     <string name="set_manager_account">Reopen Setup Page</string>
     <string name="set_manager_account_desc">Use this to update your admin account and bot space. Note that migration does not exist yet.</string>
     <string name="confirm">Confirm</string>
