--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,5 @@
     <string name="none_option">Drop messages that do not match any rules</string>
     <string name="view_logs">View Logs</string>
     <string name="view_logs_desc">View logs of the messages. Note that you must enable it in options prior.</string>
+    <string name="creating_messaging_space">Creating messaging space…</string>
 </resources>
