--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,6 @@
     <string name="remotrix_service">Remotrix service</string>
     <string name="remotrix_service_desc">Remotrix service is running with %d accounts active.</string>
     <string name="debug_menu_desc">For more verbose output for debugging</string>
+    <string name="no_default_forwarder_1">"You have not set any default forwarder or rules in the settings. "</string>
+    <string name="no_default_forwarder_2">If you do not set one, this app will not forward any messages!</string>
 </resources>
